# server/src/routes/index.ts
@@ -5,6 +5,7 @@ import YAML from 'yamljs';
 import auth from './auth';
 import user from './user';
 import announcement from './announcement';
+import course from './course';
 
 const router: Router = Router();
 const swaggerDocPath = path.join(__dirname, 'swagger.yaml');
@@ -14,4 +15,5 @@ router.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 router.use('/auth', auth);
 router.use('/users', user);
 router.use('/announcements', announcement);
+router.use('/courses', course);
 export default router;
